--- a/model_viewer/config.cfg
+++ b/model_viewer/config.cfg
@@ -1,1 +1,1 @@
-﻿object_to_load=C:\Users\tiborhencz\Source\Repos\model_viewer\model_viewer\teapot.obj
+﻿object_to_load=C:\cygwin64\home\tiborhencz\modelviewer\model_viewer\teapot.obj
