--- a/model_viewer/model_viewer.vcxproj.filters
+++ b/model_viewer/model_viewer.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="GizmoHandle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GizmoBase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Logging.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GizmoHandle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GizmoBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
